# modern-todo

./: FRONTEND_INTEGRATION_GUIDE.md
todo-backend/: .env.example  .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml  start_server.py  test_server.py
todo-backend/app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
todo-backend/app/routers/: maintain_db.py  todos.py
todo-backend/scripts/: dev.py
todo-frontend/: AI_SUBTASKS_FEATURE.md  ANIMATIONS_COMPLETE.md  ANIMATION_TIMING_UPDATE.md  COLLAPSIBLE_NAVIGATION.md  COMPACT_LAYOUT.md  DATETIME_FIX.md  DEBUG_STEPS.md  DEFAULT_DATE_FIX.md  DRAWER_NAVIGATION.md  DUE_TODAY_FIX.md  EXPORT_FIX.md  FIXED_NAVIGATION.md  HEADER_ANIMATION_FIX.md  LOCALE_FIX.md  NAVIGATION_ANIMATION_FIX.md  NAVIGATION_COUNT_FIX.md  NAVIGATION_FEATURE.md  NAVIGATION_UX_FIX.md  QUICK_START.md  README.md  README_SETUP.md  REMOVE_DRAWER.md  SEARCH_FOCUS_FIX.md  STATS_VIEW_FIX.md  SUBTASK_FEATURE.md  SUBTASK_FIX.md  VIEW_TRANSITIONS.md  index.html  package.json
todo-frontend/src/: AdminPage.jsx  App.jsx  RootRouter.jsx  index.css  main.jsx
todo-frontend/src/components/: AddTodoForm.jsx  AdminPanel.jsx  ApiTest.jsx  ConfirmDialog.jsx  FilterTabs.jsx  Navigation.jsx  SearchBar.jsx  TodoForm.jsx  TodoItem.jsx  TodoList.jsx  TodoStats.jsx
todo-frontend/src/hooks/: useTodos.js
todo-frontend/src/utils/: dateUtils.js  testApi.js  viewTransitions.js
